:sparkles: feat: code quotes

--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@ h1{
   width: 300px;
 }
 
+code {
+  background-color: ;
+}
 .main {
   color: rgb(21, 11, 100);
   margin: 1rem auto auto auto;
@@ -141,8 +144,24 @@ input::placeholder{
 form p {
   font-size: 16px;
 }
+code {
+  color: rgb(21, 11, 100);
+  font-size: 14px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.534);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
 footer {
-  background: rgb(21, 11, 100);
+  background: rgb(13, 6, 65);
   width: 100%;
   margin-top: 1rem;
   display: flex;
