:sparkles:feat: ver dados e saldo

--- a/style.css
+++ b/style.css
@@ -144,6 +144,30 @@ input::placeholder{
 form p {
   font-size: 16px;
 }
+.divsContas {
+  font-size: 22px;
+  margin-top: 1rem;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.534);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.resultados {
+  background-color: white;
+  padding: 8px;
+  border-radius: 12px;
+
+}
+ 
 code {
   color: rgb(21, 11, 100);
   font-size: 14px;
