--- a/style.css
+++ b/style.css
@@ -144,9 +144,19 @@ input::placeholder{
 form p {
   font-size: 16px;
 }
+
+#divSaldoTotal {
+  margin: 0;
+  padding: 0;
+}
+
+#contas {
+  visibility: hidden;
+}
+
 .divsContas {
-  font-size: 22px;
-  margin-top: 1rem;
+  font-size: 20px;
+  margin: 1rem;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -159,6 +169,16 @@ form p {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+}
+#correnteEpoupanca {
+  display: flex;
+  flex-direction: row;
+}
+#correnteEpoupanca div {
+  width: 500px;
+}
+.buttonsWrapper {
+  display: flex;
 }
 
 .resultados {
